--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Css Grids</title>
     <link rel="stylesheet" href="/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500,700" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>CSS Grids</h1>
+    <a href="/more.html">more</a>
+    <div>
+      <h2>What is CSS Grid layout?</h2>
+      <p>CSS Grid layout brings a two-dimensional layout tool to the web, with the ability to lay out items in rows and columns. It excels at dividing a page into major regions, or defining the relationship in terms of size, position, and layer, between parts of a control built from HTML primitives.</p>
+
+      <p>Like tables, grid layout enables an author to align elements into columns and rows. However, unlike tables, grid layout doesn't have content structure, therefore enabling a wide variety of layouts not possible in tables. For example, a grid container's child elements could position themselves so they actually overlap and layer, similar to CSS positioned elements.</p>
+    </div>
+    <h3>This is a container with a display: grid;</h3></br>
+    <h3>set the grid-template-columns: 1st 2nd 3rd</h3>
+    <div class="imgContainer">
+      <img src="/images/baracktocat.jpg" alt="">
+      <img src="/images/codercat.jpg" alt="">
+      <img src="/images/daftpunktocat-guy.gif" alt="">
+      <img src="/images/cherryontop-o-cat.png" alt="">
+      <img src="/images/droctocat.png" alt="">
+      <img src="/images/foundingfather_v2.png" alt="">
+      <img src="/images/front-end-conftocat.png" alt="">
+      <img src="/images/gangnamtocat.png" alt="">
+      <img src="/images/maxtocat.gif" alt="">
+      <img src="/images/octdrey-catburn.jpg" alt="">
+      <img src="/images/poptocat_v2.png" alt="">
+      <img src="/images/snowoctocat.png" alt="">
+    </div>
   </body>
 </html>
