more grid stuff

--- a/public/more.html
+++ b/public/more.html
@@ -14,7 +14,8 @@
       </div>
       <div class="nav">
         <a href="/index.html">home</a>
-        <a href="/more.html">more</a>
+        <a href="/more.html">nested grid</a>
+        <a href="/named.html">named grid</a>
       </div>
       <div class="aside">
         <h2>What is CSS Grid layout?</h2>
@@ -35,7 +36,9 @@
         <div class="colorBlock"></div>
       </div>
       <div class="footer">
-        References will go here.
+        <p>RESOURCES</p>
+        <a href="https://css-tricks.com/snippets/css/complete-guide-grid/">A Complete Guide to Grid - CSS-Tricks</a>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout">MDN CSS Grid Layout</a>
       </div>
    </div>
   </body>
