--- a/public/named.html
+++ b/public/named.html
@@ -11,7 +11,7 @@
     <h1>CSS Grids</h1>
     <a href="/index.html">home</a>
     <a href="/more.html">nested grid</a>
-    <!-- <a href="/named.html">named grid</a> -->
+    <a href="/named.html">named grid</a>
     <div>
       <h2>What is CSS Grid layout?</h2>
       <p>CSS Grid layout brings a two-dimensional layout tool to the web, with the ability to lay out items in rows and columns. It excels at dividing a page into major regions, or defining the relationship in terms of size, position, and layer, between parts of a control built from HTML primitives.</p>
