removed named link

--- a/public/more.html
+++ b/public/more.html
@@ -15,7 +15,7 @@
       <div class="nav">
         <a href="/index.html">home</a>
         <a href="/more.html">nested grid</a>
-        <a href="/named.html">named grid</a>
+        <!-- <a href="/named.html">named grid</a> -->
       </div>
       <div class="aside">
         <h2>What is CSS Grid layout?</h2>
