--- a/public/more.html
+++ b/public/more.html
@@ -39,6 +39,7 @@
         <p>RESOURCES</p>
         <a href="https://css-tricks.com/snippets/css/complete-guide-grid/">A Complete Guide to Grid - CSS-Tricks</a>
         <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout">MDN CSS Grid Layout</a>
+        <a href="http://gridbyexample.com/">Grid By Example</a>
       </div>
    </div>
   </body>
